--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,14 @@ h1 {
     }
 }
 
+@media only screen and (max-width: 800px) {
+    .header-area {
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
 @media only screen and (max-width: 500px) {
     .nav-bar {
      display: flex;
@@ -94,6 +102,12 @@ h1 {
     padding-right: 20px;
 }
 
+@media only screen and (max-width: 800px) {
+    .logo-img {
+       padding-bottom: 30px;
+    }
+}
+
 .header-content {
     display: flex;
     justify-content: space-around;
@@ -103,7 +117,19 @@ h1 {
     padding-bottom: 5rem;
 }
 
+@media only screen and (max-width: 800px) {
+    .header-content {
+       padding-top: 0;
+    }
+}
+
 @media only screen and (max-width: 500px) {
+    .header-image {
+       display: none;
+    }
+}
+
+@media only screen and (max-width: 800px) {
     .header-image {
        display: none;
     }
@@ -158,6 +184,10 @@ h1 {
     margin-bottom: 0.5rem;
 }
 
+.img-stretch {
+    flex-grow: 1;
+}
+
 @media only screen and (max-width: 500px) {
     .img-stretch{
        max-width: 100%;
@@ -165,8 +195,11 @@ h1 {
     }
 }
 
-.img-stretch {
-    flex-grow: 1;
+@media only screen and (max-width: 800px) {
+    .img-stretch{
+       max-width: 100%;
+       height: 0, auto;
+    }
 }
 
 .main-content-bottom {
@@ -194,6 +227,13 @@ h1 {
     .bottom-content{
         padding-left: 1rem;
       }
+}
+
+@media only screen and (max-width: 800px) {
+    .boxes {
+        padding: 10px;
+    }
+    
 }
 
 footer {
